from enum import Enum
from typing import List, Dict, Optional
from dataclasses import dataclass
import logging
from datetime import datetime
import yaml
import json

logging.basicConfig(level=logging.INFO)
logger = logging.getLogger(__name__)

class SeverityLevel(Enum):
    LOW = "LOW"
    MEDIUM = "MEDIUM"
    HIGH = "HIGH"
    CRITICAL = "CRITICAL"

class IaCType(Enum):
    ANSIBLE = "ANSIBLE"
    TERRAFORM = "TERRAFORM"

@dataclass
class RootCause:
    id: str
    description: str
    severity: SeverityLevel
    affected_components: List[str]
    metrics: Dict[str, float]

@dataclass
class Solution:
    id: str
    title: str
    description: str
    steps: List[Dict]
    estimated_time: int
    risk_level: SeverityLevel
    required_resources: List[str]
    automation_possible: bool
    success_metrics: List[Dict]
    rollback_steps: List[Dict]

@dataclass
class IaCCode:
    type: IaCType
    content: str
    variables: Dict
    dependencies: List[str]

@dataclass
class RiskAssessment:
    risk_level: SeverityLevel
    impact_score: float
    confidence_score: float
    mitigation_steps: List[str]
    warnings: List[str]

class RiskAnalyzer:
    def __init__(self):
        self.risk_thresholds = self._load_risk_thresholds()

    def _load_risk_thresholds(self) -> Dict:
        # リスク閾値の設定をロード
        return {
            "service_impact": 0.7,
            "data_loss": 0.8,
            "rollback_complexity": 0.6
        }

    def analyze_risk(self, solution: Solution) -> RiskAssessment:
        try:
            impact_score = self._assess_service_impact(solution)
            rollback_score = self._assess_rollback_complexity(solution)
            confidence_score = self._calculate_confidence_score(solution)

            # 総合リスクレベルの判定
            risk_level = self._determine_risk_level(
                impact_score, rollback_score, confidence_score
            )

            return RiskAssessment(
                risk_level=risk_level,
                impact_score=impact_score,
                confidence_score=confidence_score,
                mitigation_steps=self._generate_mitigation_steps(solution),
                warnings=self._generate_warnings(solution)
            )

        except Exception as e:
            logger.error(f"Error analyzing risk: {e}")
            raise

    def _assess_service_impact(self, solution: Solution) -> float:
        # サービス影響度の評価
        impact_factors = {
            "downtime": 0.4,
            "data_access": 0.3,
            "user_experience": 0.3
        }
        total_impact = 0.0
        
        for factor, weight in impact_factors.items():
            # 各要因の影響度を計算
            impact = self._calculate_factor_impact(solution, factor)
            total_impact += impact * weight

        return total_impact

    def _assess_rollback_complexity(self, solution: Solution) -> float:
        # ロールバックの複雑さを評価
        if not solution.rollback_steps:
            return 1.0  # ロールバック手順がない場合は最高リスク

        complexity_factors = len(solution.rollback_steps)
        dependencies = len(solution.required_resources)
        
        return (complexity_factors * 0.6 + dependencies * 0.4) / 10

    def _calculate_confidence_score(self, solution: Solution) -> float:
        # 解決策の信頼度スコアを計算
        factors = {
            "automation_possible": 0.3,
            "has_rollback": 0.3,
            "has_metrics": 0.2,
            "complexity": 0.2
        }
        
        score = 0.0
        if solution.automation_possible:
            score += factors["automation_possible"]
        if solution.rollback_steps:
            score += factors["has_rollback"]
        if solution.success_metrics:
            score += factors["has_metrics"]
        if len(solution.steps) < 5:
            score += factors["complexity"]
            
        return score

class ValidationEngine:
    def __init__(self):
        self.syntax_validators = {
            IaCType.ANSIBLE: self._validate_ansible_syntax,
            IaCType.TERRAFORM: self._validate_terraform_syntax
        }

    def validate_solution(self, solution: Solution) -> bool:
        try:
            # 解決策の妥当性検証
            if not self._validate_solution_structure(solution):
                return False

            if not self._validate_steps(solution.steps):
                return False

            if not self._validate_metrics(solution.success_metrics):
                return False

            return True

        except Exception as e:
            logger.error(f"Error validating solution: {e}")
            return False

    def validate_iac(self, iac_code: IaCCode) -> bool:
        try:
            # IaCコードの検証
            if not self._validate_iac_structure(iac_code):
                return False

            # 構文チェック
            validator = self.syntax_validators.get(iac_code.type)
            if not validator(iac_code.content):
                return False

            # ベストプラクティスチェック
            if not self._check_best_practices(iac_code):
                return False

            return True

        except Exception as e:
            logger.error(f"Error validating IaC code: {e}")
            return False

class MonitoringEngine:
    def __init__(self):
        self.metrics_collector = self._initialize_metrics_collector()
        self.alert_thresholds = self._load_alert_thresholds()

    def monitor_execution(self, solution: Solution) -> None:
        try:
            # 実行監視の開始
            execution_id = self._start_monitoring_session(solution)
            
            # メトリクス収集の設定
            self._setup_metrics_collection(solution.success_metrics)
            
            # アラート設定
            self._setup_alerts(solution.risk_level)
            
            logger.info(f"Started monitoring execution {execution_id}")

        except Exception as e:
            logger.error(f"Error setting up monitoring: {e}")
            raise

    def collect_metrics(self) -> Dict:
        # 現在のメトリクスを収集
        return self.metrics_collector.collect_current_metrics()

    def analyze_results(self, metrics: Dict) -> bool:
        # 収集したメトリクスを分析
        try:
            for metric_name, value in metrics.items():
                threshold = self.alert_thresholds.get(metric_name)
                if threshold and value > threshold:
                    self._trigger_alert(metric_name, value, threshold)
                    return False
            return True

        except Exception as e:
            logger.error(f"Error analyzing metrics: {e}")
            return False
        
class RemediationService:
    def __init__(self):
        self.solution_generator = SolutionGenerator()
        self.iac_generator = IaCGenerator()
        self.validation_engine = ValidationEngine()
        self.monitoring_engine = MonitoringEngine()
        self.risk_analyzer = RiskAnalyzer()

    def generate_remediation_plan(self, root_cause: RootCause) -> Solution:
        try:
            # 解決策の生成
            solutions = self.solution_generator.generate_solutions(root_cause)
            
            # リスク評価と優先順位付け
            assessed_solutions = []
            for solution in solutions:
                risk_assessment = self.risk_analyzer.analyze_risk(solution)
                assessed_solutions.append((solution, risk_assessment))
            
            # 最適な解決策を選択
            selected_solution = self._select_best_solution(assessed_solutions)
            
            logger.info(f"Generated remediation plan: {selected_solution.id}")
            return selected_solution

        except Exception as e:
            logger.error(f"Error generating remediation plan: {e}")
            raise

    def generate_iac(self, solution: Solution) -> IaCCode:
        try:
            # IaCコードの生成
            iac_code = self.iac_generator.generate_iac(solution)
            
            # 生成されたコードの検証
            if not self.validation_engine.validate_iac(iac_code):
                raise ValueError("Generated IaC code failed validation")
            
            return iac_code

        except Exception as e:
            logger.error(f"Error generating IaC: {e}")
            raise

    def execute_remediation(self, solution: Solution) -> bool:
        try:
            # 実行前の検証
            if not self.validation_engine.validate_solution(solution):
                raise ValueError("Solution validation failed")

            # リスク評価
            risk = self.risk_analyzer.analyze_risk(solution)
            if risk.risk_level in [SeverityLevel.HIGH, SeverityLevel.CRITICAL]:
                if not self._get_manual_approval(solution, risk):
                    return False

            # モニタリングの設定
            self.monitoring_engine.monitor_execution(solution)

            # 解決策の実行
            success = self._execute_solution_steps(solution)
            if not success:
                self._perform_rollback(solution)
                return False

            # 結果の検証
            metrics = self.monitoring_engine.collect_metrics()
            if not self.monitoring_engine.analyze_results(metrics):
                self._perform_rollback(solution)
                return False

            return True

        except Exception as e:
            logger.error(f"Error executing remediation: {e}")
            self._perform_rollback(solution)
            return False

    def _select_best_solution(self, assessed_solutions: List[tuple]) -> Solution:
        # リスクと効果のバランスを考慮して最適な解決策を選択
        return sorted(
            assessed_solutions,
            key=lambda x: (x[1].risk_level.value, -x[1].confidence_score)
        )[0][0]

    def _execute_solution_steps(self, solution: Solution) -> bool:
        try:
            for step in solution.steps:
                if not self._execute_step(step):
                    return False
            return True
        except Exception as e:
            logger.error(f"Error executing solution steps: {e}")
            return False

    def _perform_rollback(self, solution: Solution) -> None:
        logger.info(f"Performing rollback for solution {solution.id}")
        for step in reversed(solution.rollback_steps):
            try:
                self._execute_step(step)
            except Exception as e:
                logger.error(f"Error during rollback: {e}")

    @staticmethod
    def _get_manual_approval(solution: Solution, risk: RiskAssessment) -> bool:
        # 実際の実装では承認システムと連携
        logger.info(f"Requesting manual approval for high-risk solution {solution.id}")
        return True  # デモ用に常にTrueを返す
    
